# renderer

./: .gitignore  CMakeLists.txt
include/: api_vulkan.hpp  camera.hpp  clock.hpp  command.hpp  constants.hpp  context.hpp  convert.hpp  device.hpp  extension.hpp  gl_loader.hpp  input.hpp  input_codes.hpp  logger.hpp  pipeline.hpp  platform.hpp  queue.hpp  render_pass.hpp  renderer.hpp  shader.hpp  surface.hpp  swapchain.hpp  sync.hpp  viewport_scissor.hpp  window.hpp
include/platform/: win32.hpp  win32_input.hpp  win32_window.hpp
include/samples/: triangle_sample.hpp
lib/: CMakeLists.txt
lib/input/: CMakeLists.txt  vcpkg.json
lib/input/include/input/: action.hpp  binding.hpp  input.hpp  key_state.hpp  keycode.hpp  scancode.hpp
lib/input/src/: input.cpp  key_state.cpp  keycode.cpp  scancode.cpp
lib/platform/: CMakeLists.txt
lib/platform/include/platform/: platform.hpp
lib/platform/include/platform/windows/: win32.hpp  win32_window.hpp
lib/platform/src/windows/: win32_window.cpp
lib/renderer/: CMakeLists.txt  vcpkg.json
lib/renderer/include/renderer/: command.hpp  context.hpp  core.hpp  debug_messenger.hpp  device.hpp  extension.hpp  fence.hpp  frame_data.hpp  instance.hpp  logger.hpp  pipeline.hpp  queue.hpp  queue_family.hpp  render_pass.hpp  renderer.hpp  renderer_extensions.hpp  semaphore.hpp  shader.hpp  surface.hpp  swapchain.hpp  sync.hpp  util.hpp  viewport_scissor.hpp
lib/renderer/include/renderer/api/: gl_loader.hpp
lib/renderer/include/renderer/core/: renderer.hpp
lib/renderer/include/renderer/types/: uint.hpp  vec.hpp
lib/renderer/src/: command.cpp  context.cpp  debug_messenger.cpp  device.cpp  extension.cpp  fence.cpp  frame_data.cpp  gl_loader.cpp  instance.cpp  pipeline.cpp  queue.cpp  render_pass.cpp  renderer.cpp  semaphore.cpp  shader.cpp  surface.cpp  swapchain.cpp  sync.cpp
lib/window/: .gitignore  CMakeLists.txt
lib/window/include/window/: win32.hpp  win32_window.hpp  window.hpp
lib/window/src/: win32_window.cpp
samples/: CMakeLists.txt
samples/keyboard_mapper/: CMakeLists.txt  main.cpp
samples/triangle/: CMakeLists.txt  triangle.cpp
samples/triangle/shaders/: triangle.frag  triangle.vert
shaders/: rect.frag  rect.vert  triangle.frag  triangle.vert
src/: api_vulkan.cpp  camera.cpp  clock.cpp  command.cpp  context.cpp  convert.cpp  debug_messenger.cpp  device.cpp  extension.cpp  gl_loader.cpp  input.cpp  instance.cpp  logger.cpp  main.cpp  pipeline.cpp  queue.cpp  render_pass.cpp  renderer.cpp  shader.cpp  surface.cpp  swapchain.cpp  sync.cpp  window.cpp
src/platform/: win32_input.cpp  win32_window.cpp
src/samples/: triangle_sample.cpp
